<resources>
    <string name="app_name">Music Player</string>
    <string name="library">Library</string>
    <string name="music_app">Music Player</string>
    <string name="settings">Settings</string>
    <string name="playlists">Playlists</string>
    <string name="favorites">Favorites</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_a_playlist">Add to a playlist</string>
    <string name="delete">Delete</string>
    <string name="properties">Properties</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="playlist_name">Playlist name</string>
    <string name="song_information">Song information</string>
    <string name="song_name">Song name</string>
    <string name="author_artist">Author/Artist</string>
    <string name="location">Location</string>
    <string name="name_of_the_song">Name of the song</string>
    <string name="sort_by_length">Sort by length</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_date_added">Sort by date added</string>
    <string name="ascending">Ascending</string>
    <string name="looping_size">Looping size</string>
    <string name="dark_theme">Dark theme</string>
    <string name="set_background">Set background</string>
    <string name="songs_folder">Song folder</string>
    <string name="name_of_the_folder">Name of the folder</string>
    <string name="song_minimum_length">Song minimum length</string>
    <string name="color_rbg">#FFFFFF</string>
    <string name="text_color">Text color</string>
    <string name="_8942">⋮</string>
    <string name="a_bar_to_show_music_progress">A bar to show music progress</string>
    <string name="make_the_song_a_favourite">Make the song a favourite</string>
    <string name="show_additional_options">Show additional options</string>
    <string name="pause">Pause</string>
    <string name="play_songs_in_a_random_order">Play songs in a random order</string>
    <string name="skip_to_previous_song">Skip to previous song</string>
    <string name="skip_to_next_song">Skip to next song</string>
    <string name="play_same_or_different_songs">Play same or different songs</string>
    <string name="save_state">Save state</string>
    <string name="dark_mode">Dark mode</string>
    <string name="random_order">Random order</string>
    <string name="save_state_when_exiting">Save state when exiting</string>
    <string name="Regex_replace_filenameNumber">\\([0-9]\\)</string>
    <string name="create_a_new_playlist">Create a new playlist</string>
    <string name="lyrics_of_the_song_line_1">Lyrics of the song line 1</string>
    <string name="a_container_to_contain_lyrics_of_the_song_if_they_are_available">A container to contain lyrics of the song if they are available</string>
    <string name="lyrics_of_the_song_line_3">Lyrics of the song line 3</string>
    <string name="lyrics_of_the_song_line_2">Lyrics of the song line 2</string>
    <string name="lyrics_of_the_song_line_4">Lyrics of the song line 4</string>
    <string name="lyrics_of_the_song_line_5">Lyrics of the song line 5</string>
    <string name="lyrics_of_the_song_line_6">Lyrics of the song line 6</string>
    <string name="lyrics_of_the_song_line_7">Lyrics of the song line 7</string>
</resources>