<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/song_information_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/name_of_the_song"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/lyrics_container"
        android:layout_width="match_parent"
        android:layout_height="421dp"
        android:layout_above="@+id/song_information_bottom_bar"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="156dp"
        android:contentDescription="@string/a_container_to_contain_lyrics_of_the_song_if_they_are_available"
        android:gravity="center"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <!--<TextView
            android:id="@+id/lyrics1"
            android:lines="2"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lyrics_of_the_song_line_1"
            android:textSize="23sp" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/song_information_bottom_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/favorites_border"
        android:contentDescription="@string/a_bar_to_show_music_progress"
        android:gravity="center">

        <ImageButton
            android:id="@+id/detailed_add_to_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/make_the_song_a_favourite"
            android:src="@drawable/favorites_selector" />

        <ImageButton
            android:id="@+id/detailed_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/show_additional_options"
            android:src="@drawable/menu_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/song_information_bottom_bar"
        android:layout_gravity="bottom"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_information_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="@string/author_artist"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_author"/>

        <TextView
            android:id="@+id/song_information_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="@string/location"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_location"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/song_information_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:divider="@drawable/linearlayouttopdivider"
        android:showDividers="beginning"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            tools:ignore="UselessParent">
            <ImageButton
                android:id="@+id/detailed_shuffle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/shuffle_selector"
                android:contentDescription="@string/play_songs_in_a_random_order" />
            <ImageButton
                android:id="@+id/BtnPrev"
                android:background="@drawable/ic_baseline_skip_previous_24"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/skip_to_previous_song" />
            <ImageButton
                android:id="@+id/BtnPause"
                android:background="@drawable/custom_playicon"
                android:scaleType="fitCenter"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/pause" />
            <ImageButton
                android:id="@+id/BtnNext"
                android:background="@drawable/ic_baseline_skip_next_24"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/skip_to_next_song" />
            <ImageButton
                android:id="@+id/detailed_replay"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="45dp"
                android:background="@drawable/replay_selector"
                android:contentDescription="@string/play_same_or_different_songs" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>