<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="0dp"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardPreventCornerOverlap="false">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewHead"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_margin="0dp"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:text="@string/name_of_the_song"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewHead"
                android:layout_margin="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:paddingStart="20dp"
                android:text="@string/song_information"
                android:textAppearance="?android:textAppearanceMedium"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textViewOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="0dp"
                android:paddingStart="40dp"
                android:layout_alignParentEnd="true"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:text="@string/_8942"
                android:textAppearance="?android:textAppearanceLarge"
                tools:ignore="RelativeOverlap" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>