<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/settings_dark_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:cardElevation="0dp"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/Theme_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:text="@string/text_color"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <top.defaults.colorpicker.ColorWheelView
                android:id="@+id/color_wheel"
                android:layout_toStartOf="@id/settings_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/settings_color_text"
                android:maxLength="7"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:inputType="textFilter|textNoSuggestions"
                android:paddingEnd="20dp"
                android:text="@string/color_rbg"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/settings_looping_size"
        android:layout_below="@id/settings_dark_theme"
        android:layout_width="match_parent"
        android:backgroundTint="@android:color/transparent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/looping_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:text="@string/looping_size"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/settings_looping_size_number"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/settings_min_length"
        android:layout_below="@id/settings_looping_size"
        android:layout_width="match_parent"
        android:backgroundTint="@android:color/transparent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/min_length_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:text="@string/song_minimum_length"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <NumberPicker
                    android:id="@+id/numpicker_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></NumberPicker>

                <NumberPicker
                    android:id="@+id/numpicker_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></NumberPicker>

            </LinearLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/settings_songs_folder"
        android:layout_below="@id/settings_min_length"
        android:layout_width="match_parent"
        android:backgroundTint="@android:color/transparent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/folder_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:text="@string/songs_folder"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/settings_songs_folder_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:text="@string/name_of_the_folder"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/settings_background"
        android:layout_below="@id/settings_songs_folder"
        android:layout_width="match_parent"
        android:backgroundTint="@android:color/transparent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/background_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:text="@string/set_background"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>